2008-10-21 Frank Naegler  <typo3@naegler.net>

	* bugfix TS-Viewhelper, it has returned no array data
	* added new ViewHelper to generate any TS object by calling cObjGetSingle() 

2008-10-20 Ingo Renner  <ingo@typo3.org>

	* changed method getResourceId in the abstract community application controller, the check for a null user is not necessary as there's always a user
	* added a missing setter for the user's city property

2008-10-20 Frank Naegler  <typo3@naegler.net>

	* added functionaltiy to the AccessManager for the role "all community members"

2008-10-17 Frank Naegler  <typo3@naegler.net>

	* added check of restricted groups (grouptype = 4) in listgroups application
	* added getGrouptype() to the groupProfile model
	* added hook connector for mm_forum to change the link to the user profile, require mm_forum 1.7
	* change addAsFriendAction of tx_community_controller_userprofile_ProfileActionsWidget to makes it possible to overwrite the roleId by request parameter, this is needed to add different links for more then one role.

2008-10-16 Frank Naegler  <typo3@naegler.net>

	* added check if resource is added before add it twice in tx_community_AccessManager->addResource()
	* added implements tx_community_acl_AclResource to tx_community_controller_AbstractCommunityApplication and its needed methods
	* added listType to the listGroups application
	* added ZodiacSign ViewHelper
	* added getCrdate() and setCrdate to User model and gateway
	* added getCity() to User model
	* added Age ViewHelper
	* added new param to Link View Helper for custom ATagParams
	* localize label of UserProfileActionWidget
	* localize label of MyGroupsWidget

2008-10-08 Ingo Renner  <ingo@typo3.org>

	* changed the widget view helper to require the real names of application and widget
	* added a method in the template engine so that view helpers get variables handed over to them if needed
	* added a thumbnail action to the group profile's image widget