@@ -251,16 +251,17 @@ abstract class tx_community_controller_AbstractCommunityApplication extends tsli
 	 * @return string
 	 */
 	public function getResourceId() {
-		$resourceId    = '';
+		$resourceId = '';
+		
 		$requestedUser = $this->getRequestedUser();
-
-		$resourceId = $this->name
-			. '_' . $this->accessMode
-			. '_' . $requestedUser->getUid();
-
+		if (!is_null($requestedUser)) {
+			$resourceId = $this->name
+				. '_' . $this->accessMode
+				. '_' . $requestedUser->getUid();
+		}		
 		return $resourceId;
 	}
-
+	
 	/**
 	 * gets the user gateway
 	 *
