@@ -1,7 +1,8 @@
 2008-10-21 Frank Naegler  <typo3@naegler.net>
 
 	* bugfix TS-Viewhelper, it has returned no array data
-	* added new ViewHelper to generate any TS object by calling cObjGetSingle() 
+	* added new ViewHelper to generate any TS object by calling cObjGetSingle()
+	* revert changes of method getResourceId in the abstract community application controller, because the check for a null user is necessary as there's not always a user. for example on the groupProfile application 
 
 2008-10-20 Ingo Renner  <ingo@typo3.org>
 
